# sigil

./: PRIMER.md  README.md  __main__.py  cli.py  context.py  mise.toml  models.py  pyproject.toml  sg  storage.py  validate.py
.sigil/: bookmarks.jsonl
.sigil/contexts/: bm_1772142727_7e77.ctx  bm_1772142739_3994.ctx  bm_1772142745_ce05.ctx  bm_1772142752_d062.ctx  bm_1772142758_e1ff.ctx  bm_1772142765_2fa9.ctx  bm_1772142771_6d38.ctx  bm_1772142777_63b3.ctx  bm_1772142785_9aa1.ctx  bm_1772142791_6a45.ctx  bm_1772298462_1af1.ctx  bm_1772323708_131f.ctx  bm_1772323708_5d3a.ctx  bm_1772323708_6527.ctx  bm_1772323708_9d2a.ctx  bm_1772323708_a8b6.ctx  bm_1772323708_aed8.ctx  bm_1772323708_b059.ctx  bm_1772323708_b28f.ctx  bm_1772323708_bf96.ctx  bm_1772323708_c82f.ctx  bm_1772323708_c841.ctx  bm_1772323708_eb4b.ctx  bm_1772728868_e971.ctx  bm_1772728872_007d.ctx  bm_1772760905_afbd.ctx  bm_1772760905_c33d.ctx  bm_1772760906_240d.ctx  bm_1772760906_2484.ctx  bm_1772760906_94e1.ctx  bm_1772760906_a9df.ctx  bm_1772760906_ed43.ctx
chronicles/: 2026-03-01-add-json-and-help.md  2026-03-03-add-long-flag.md  2026-03-03-bump-version.md  2026-03-05-add-unsafe-tab-bookmarks.md  2026-03-05-indent-tab.md  2026-03-05-trim-duplicates.md  2026-03-06-add-bookmarks.md  2026-03-06-debug-tests.md  2026-04-19-efficacy-followup-and-adr-linkage.md  CHRONICLE.md  TEMPLATE.md  ch1.md  ch2.md  ch3.md  ch4.md  ch5.md
docs/decisions/: 0001-event-log.md
memory/: MEMORY.md
src/sigil/: cli.py  (+9 more)
tests/: test_adr_check.py  test_cli_list_long.py  test_cli_more.py  test_more.py  test_validate_unsafe.py
(+9 files in other folders)
